hotrod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hotrod-driver
  namespace: hotrod
  labels:
    appName: hotrod-driver
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the driver service. Use CLusterIP
  ports:
  - name: hotrod-driver
    port: 8082
  type: ClusterIP
  selector:
    appName: hotrod-driver
---
apiVersion: apps/v1beta2 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: hotrod-driver
  namespace: hotrod
spec:
  selector:
    matchLabels:
      appName: hotrod-driver
  replicas: 3
  template:
    metadata:
      labels:
        appName: hotrod-driver
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
    spec:
      containers:
      - name: hotrod-driver
        image: index.docker.io/willwangkelda/hotrod-driver
        command: ["/go/bin/hotrod", "driver"]
        ports:
        - containerPort: 8082
